@@ -1,3 +1,0 @@
-- Remove lunachan support
-- New icon
-- Changed description
